--- a/app/src/main/res/layout/activity_x.xml
+++ b/app/src/main/res/layout/activity_x.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    android:background="@drawable/pagebkg">
+    android:background="@drawable/pagebkg"
+    tools:context=".auth.LoginActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
