--- a/app/src/main/res/layout/activity_science_subject11.xml
+++ b/app/src/main/res/layout/activity_science_subject11.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -25,7 +25,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/video"
+                android:text="@string/science"
                 android:textAlignment="center"
                 android:textColor="@color/lavender"
                 android:textSize="36sp"
@@ -44,14 +44,14 @@
                     android:layout_height="wrap_content">
 
                     <Button
-                        android:id="@+id/Science12"
+                        android:id="@+id/bio"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/custom_edit_text"
                         android:backgroundTint="@color/lavender"
                         android:padding="12dp"
-                        android:text="@string/science"
+                        android:text="@string/biology"
                         android:drawablePadding="8dp"
                         app:cornerRadius="20dp" />
 
@@ -64,19 +64,38 @@
                     android:layout_marginTop="10dp">
 
                     <Button
-                        android:id="@+id/Science11"
+                        android:id="@+id/phy"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/custom_edit_text"
                         android:backgroundTint="@color/lavender"
                         android:padding="12dp"
-                        android:text="@string/science"
+                        android:text="@string/physics"
                         android:drawablePadding="8dp"
                         app:cornerRadius="20dp" />
 
                 </TableRow>
 
+                <!-- English -->
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <Button
+                        android:id="@+id/che"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/custom_edit_text"
+                        android:backgroundTint="@color/lavender"
+                        android:padding="12dp"
+                        android:text="@string/chemistry"
+                        android:drawablePadding="8dp"
+                        app:cornerRadius="20dp" />
+
+                </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -84,14 +103,14 @@
                     android:layout_marginTop="10dp">
 
                     <Button
-                        android:id="@+id/commerece12"
+                        android:id="@+id/maths"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/custom_edit_text"
                         android:backgroundTint="@color/lavender"
                         android:padding="12dp"
-                        android:text="@string/commerece"
+                        android:text="@string/maths"
                         android:drawablePadding="8dp"
                         app:cornerRadius="20dp" />
 
@@ -105,14 +124,14 @@
                     android:layout_marginTop="10dp">
 
                     <Button
-                        android:id="@+id/commerece11"
+                        android:id="@+id/computer"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/custom_edit_text"
                         android:backgroundTint="@color/lavender"
                         android:padding="12dp"
-                        android:text="@string/commerece"
+                        android:text="@string/computer"
                         android:drawablePadding="8dp"
                         app:cornerRadius="20dp" />
 
@@ -124,14 +143,14 @@
                     android:layout_marginTop="10dp">
 
                     <Button
-                        android:id="@+id/arts12"
+                        android:id="@+id/english"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/custom_edit_text"
                         android:backgroundTint="@color/lavender"
                         android:padding="12dp"
-                        android:text="@string/arts"
+                        android:text="@string/english"
                         android:drawablePadding="8dp"
                         app:cornerRadius="20dp" />
 
@@ -143,14 +162,14 @@
                     android:layout_marginTop="10dp">
 
                     <Button
-                        android:id="@+id/arts11"
+                        android:id="@+id/sanskrit"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/custom_edit_text"
                         android:backgroundTint="@color/lavender"
                         android:padding="12dp"
-                        android:text= "@string/arts"
+                        android:text="@string/sanskrit"
                         android:drawablePadding="8dp"
                         app:cornerRadius="20dp" />
 
@@ -162,4 +181,4 @@
 
     </androidx.cardview.widget.CardView>
 
-</FrameLayout>
+</LinearLayout>
