--- a/app/src/main/res/layout/activity_arts.xml
+++ b/app/src/main/res/layout/activity_arts.xml
@@ -7,7 +7,9 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    android:background="@drawable/pagebkg">
+    android:background="@color/lavender">
+
+<!--    android:background="@drawable/pagebkg"-->
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
