--- a/app/src/main/res/layout/activity_science_quiz.xml
+++ b/app/src/main/res/layout/activity_science_quiz.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    android:background="@drawable/pagebkg">
+    android:background="@color/lavender">
 
     <!-- Question TextView -->
     <TextView
