--- a/app/src/main/res/layout/activity_science_subject12.xml
+++ b/app/src/main/res/layout/activity_science_subject12.xml
@@ -1,6 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/lavender"
+    tools:context=".VideoFragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/custom_edit_text"
+            android:orientation="vertical"
+            android:padding="24dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/science"
+                android:textAlignment="center"
+                android:textColor="@color/lavender"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+
+            <!-- TableLayout for subjects -->
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:stretchColumns="1"
+                android:layout_marginTop="16dp">
+
+                <!-- Mathematics -->
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/bio"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/custom_edit_text"
+                        android:backgroundTint="@color/lavender"
+                        android:padding="12dp"
+                        android:text="@string/biology"
+                        android:drawablePadding="8dp"
+                        app:cornerRadius="20dp" />
+
+                </TableRow>
+
+                <!-- Science -->
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <Button
+                        android:id="@+id/phy"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/custom_edit_text"
+                        android:backgroundTint="@color/lavender"
+                        android:padding="12dp"
+                        android:text="@string/physics"
+                        android:drawablePadding="8dp"
+                        app:cornerRadius="20dp" />
+
+                </TableRow>
+
+                <!-- English -->
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <Button
+                        android:id="@+id/che"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/custom_edit_text"
+                        android:backgroundTint="@color/lavender"
+                        android:padding="12dp"
+                        android:text="@string/chemistry"
+                        android:drawablePadding="8dp"
+                        app:cornerRadius="20dp" />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <Button
+                        android:id="@+id/maths"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/custom_edit_text"
+                        android:backgroundTint="@color/lavender"
+                        android:padding="12dp"
+                        android:text="@string/maths"
+                        android:drawablePadding="8dp"
+                        app:cornerRadius="20dp" />
+
+                </TableRow>
+
+
+                <!-- Social Science -->
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <Button
+                        android:id="@+id/computer"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/custom_edit_text"
+                        android:backgroundTint="@color/lavender"
+                        android:padding="12dp"
+                        android:text="@string/computer"
+                        android:drawablePadding="8dp"
+                        app:cornerRadius="20dp" />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <Button
+                        android:id="@+id/english"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/custom_edit_text"
+                        android:backgroundTint="@color/lavender"
+                        android:padding="12dp"
+                        android:text="@string/english"
+                        android:drawablePadding="8dp"
+                        app:cornerRadius="20dp" />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <Button
+                        android:id="@+id/sanskrit"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/custom_edit_text"
+                        android:backgroundTint="@color/lavender"
+                        android:padding="12dp"
+                        android:text="@string/sanskrit"
+                        android:drawablePadding="8dp"
+                        app:cornerRadius="20dp" />
+
+                </TableRow>
+
+            </TableLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
