--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    android:background="@drawable/pagebkg"
+    android:background="@color/lavender"
     tools:context=".HomeFragment">
 
     <androidx.cardview.widget.CardView
