--- a/app/src/main/res/layout/activity_arts_subject11.xml
+++ b/app/src/main/res/layout/activity_arts_subject11.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".VideoFragment"
-    android:background="@color/lavender">
-<!--    android:background="@drawable/pagebkg">-->
+    android:background="@drawable/pagebkg">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
