--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    android:background="@color/lavender"
+    android:background="@drawable/pagebkg"
     tools:context=".auth.LoginActivity">
 
     <androidx.cardview.widget.CardView
