--- a/app/src/main/res/layout/regarding_subject.xml
+++ b/app/src/main/res/layout/regarding_subject.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lavender"
+    android:background="@drawable/pagebkg"
     tools:context=".VideoFragment"
     android:paddingTop="16dp">
 
